# redteamagentloop

./: .env.example  .gitignore  README.md  RedTeamAgentLoop_system.md  RedTeamLoop.pptx  attack_strategy_framework_analysis.md  authorization.txt  call_sequence_trace.md  config.yaml  docker-compose.yml  implementation_plan.md  pyproject.toml  run_all_strategies.py  run_golden_dataset_eval.py  run_strategy.py
console/: Dockerfile  __init__.py
console/backend/: __init__.py  event_mapper.py  main.py  models.py  session_manager.py
console/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
doc/: RedTeamLoop.pptx  attack_strategy_framework_analysis.md  call_sequence_trace.md
evaluation/: __init__.py  canary_targets.py  judge_eval_dataset.jsonl  judge_evaluator.py  ragas_eval.py
redteamagentloop/: __init__.py  cli.py  config.py  guardrails.py  llm_factory.py  logger.py  ratelimit.py  report_generator.py  terminal_dashboard.py
redteamagentloop/agent/: __init__.py  graph.py  state.py
redteamagentloop/prompts/: judge_template.j2
redteamagentloop/storage/: __init__.py  chroma_store.py  jsonl_store.py  manager.py  sqlite_store.py
redteamagentloop/templates/: report.html.j2
reports/output/: a1be057c_20260409_065847.html
tests/: known_jailbreaks.jsonl  run_all_strategies.py  run_golden_dataset_eval.py  run_strategy.py  test_regression.py
tests/integration/: test_graph_integration.py
tests/unit/: test_console.py  test_evaluation.py  test_graph.py  test_nodes.py  test_phase9.py  test_reporting.py  test_state.py  (+2 more)
(+19 files in other folders)
